Flesh out the LaTeX version of the type theory

--- a/Plylet.tex
+++ b/Plylet.tex
@@ -6,11 +6,10 @@
 \begin{document}
 
 The unit type is built in. Because this is not dependently typed, we can place
-values and types in two different namespaces. Moreover, we don't even need to
-let the value of unit show up in the surface language. So let's follow the
-convention of using empty tuple syntax $()$ at both the value and type level.
+values and types in two different namespaces, so let's follow the convention of
+using empty tuple syntax $()$ at both the value and type level.
 
-\[ \frac{}{\Gamma\vdash()\mathbin{:}()}\quad\text{(Unit)} \]
+\[ \frac{}{\Gamma\vdash()\mathbin{:}()}\quad\text{(Unit introduction)} \]
 
 Implicit coercion ($\leadsto$) is, after type-of ($:$), a second kind of
 judgment. Coercions are useful on input types of functions; implicit coercions
@@ -26,19 +25,35 @@ function application, we want to make this base case always possible, so we
 introduce a rule for coercion reflexivity. However we don't want to introduce
 any complex system for saying ``we have a type in the environment'', so instead
 we define the rule in this form, which is simple (in terms of not requiring any
-more constructs to be introduced into the system) and useful (in that it is
-immediately applicable at the point that you actually need it).
+more constructs, such as parametric polymorphism, to be introduced into the
+system) and useful (in that it is immediately applicable at the point that you
+actually need it).
 
 \[ \frac{\Gamma\vdash x\mathbin{:}\alpha}{\Gamma\vdash \alpha\leadsto\alpha}\quad\text{(Coercion reflexivity)} \]
 
 We also want $\textbf{let}\dots\textbf{in}\dots$ expressions.
 
-\[ \frac{\Gamma\vdash M\mathbin{:}\alpha\quad\Gamma\vdash
-    P[x:=M]\mathbin{:}\beta}{\Gamma\vdash \textbf{let}\, x = M \,\textbf{in}\, P\mathbin{:}\beta}\quad\text{(Let expression)} \]
+\[ \frac{\Gamma\vdash M\mathbin{:}\alpha\quad\Gamma\vdash P[x:=M]\mathbin{:}\beta}{\Gamma\vdash \textbf{let}\, x = M \,\textbf{in}\, P\mathbin{:}\beta}\quad\text{(Let expression)} \]
 
-%\[ \frac{c \text{ is a constant of type } T}{\Gamma\vdash c\mathbin{:}T} \]
-%\[ \frac{\Gamma,x\mathbin{:}\sigma\vdash e\mathbin{:}\tau}{\Gamma\vdash (\lambda x\mathbin{:}\sigma.~e)\mathbin{:}(\sigma \to \tau)} \]
-%\[ \frac{\Gamma\vdash e_1\mathbin{:}\sigma\to\tau\quad\Gamma\vdash e_2\mathbin{:}\sigma}{\Gamma\vdash e_1~e_2\mathbin{:}\tau} \]
+We also want to be able to construct pairs. We do not need to be able to
+deconstruct them within the scope of this theory, so we only add an introduction
+rule.
+
+\[ \frac{\Gamma\vdash x\mathbin{:}\alpha\quad\Gamma\vdash y\mathbin{:}\beta}{\Gamma\vdash (x, y)\mathbin{:}\alpha*\beta}\quad\text{(Pair introduction)} \]
+
+Thus, only two type constructors are supported out of the box, both binary:
+$\to$ for function types, and $*$ for pair types.
+
+It is also desirable to be allowed to sequence expressions, where the first one
+is of type unit---in which case, we can think of it as a statement---on separate
+lines, which we denote here for the sake of the syntax with the standard C-style
+line separator $;$.
+
+\[ \frac{\Gamma\vdash x\mathbin{:}()\quad\Gamma\vdash y\mathbin{:}\alpha}{\Gamma\vdash (x\mathbin{;}y)\mathbin{:}\alpha}\quad\text{(Expression combination)} \]
+
+This would allow us to write blocks of imperative code, as in ML dialects. (The
+interpreter will want to consider Plylet to be an ``inside-the-monad''
+perspective for whatever monad it interprets it within).
 
 \end{document}
 
